add repo local link

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
     <artifactId>jenkin_maven_2</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <repositories>
+        <repository>
+            <id>jenkin_maven</id>
+            <name>jenkin_maven_2</name>
+            <url>C:\Users\lethuthuy1204\.m2\repository</url>
+        </repository>
+    </repositories>
 
     <!-- Khai báo biến - Global Variable -->
     <properties>
